# tracking_library

./: .gitignore  README.md  pyproject.toml
tracking_library/tracklet_stitching/configs/: cohort_1vs2.yaml
tracking_library/tracklet_stitching/infer/: infer_node_edge_selection.py
